<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="188dp"
        android:layout_height="121dp"
        android:scaleType="fitXY"
        android:src="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Small Profile icon -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/small_profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/default_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Image Large -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/default_profile"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/change_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Picture"
        android:textColor="#000"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Name -->
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:padding="12dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/change_picture"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />

    <!-- Username -->
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:padding="12dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="@id/edit_name"
        app:layout_constraintEnd_toEndOf="@id/edit_name" />

    <!-- Email -->
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email Id"
        android:padding="12dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        app:layout_constraintStart_toStartOf="@id/edit_name"
        app:layout_constraintEnd_toEndOf="@id/edit_name" />

    <!-- Change Password -->

    <!-- Save -->

    <!-- Logout -->

    <EditText
        android:id="@+id/edit_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="Bio"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_change_password"
        app:layout_constraintEnd_toEndOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="@id/edit_name"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        app:layout_constraintVertical_bias="0.628" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="#017483"
        android:text="Change Password"
        android:textColor="#FFFFFF"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#017483"
        android:text="Save"
        android:textColor="#FFFFFF"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_password" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#017483"
        android:text="Logout"
        android:textColor="#FFFFFF"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>
