...
            android:inputType="textPassword"
            android:background="@drawable/change_password_drawable"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#017483"
            android:text="Change Password"
            android:textColor="#FFFFFF"
...
